# CPU_Scheduling_Simulator

./: CMakeLists.txt  Main.c  Utilities.c  Utilities.h
Models/: Process.h
Scheduler/: Schedulers.c  Schedulers.h
Structers/: PriorityQueue.c  PriorityQueue.h  SegTree.c  SegTree.h  compareFunctions.c  compareFunctions.h
